Refinements of navigation part of layout. It no longer covers the top 50px of the page.
Also adding in template that will display session messages and
stubbed a login template.

https://github.com/julisana/laravel-recipes/issues/13

 Changes to be committed:
	modified:   app/Http/Controllers/Controller.php
	modified:   app/Http/routes.php
	modified:   app/Models/User.php
	modified:   resources/assets/sass/app.scss
	new file:   resources/assets/sass/profile.scss
	new file:   resources/views/auth/login.twig
	modified:   resources/views/layout.twig
	new file:   resources/views/messages.twig
	modified:   resources/views/navigation.twig
	modified:   resources/views/profile/index.twig

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,7 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+body {
+  font-family: source-sans-pro, sans-serif;
+  font-size: 15px;
+  padding-top: 50px;
+}
